Fixed Toolbar (Save/Done) button on Create Client form alignment is off.

--- a/app/assets/stylesheets/angular/angular.css.scss
+++ b/app/assets/stylesheets/angular/angular.css.scss
@@ -140,6 +140,12 @@ body {
     }
   }
 
+  .button-bar {
+     @include respond-to(widescreens) {
+      padding-right: 56px;
+    }
+  }
+
   .table-header {
     margin-bottom: 20px;
     display: table;
